Enable Azure AD auth for Terraform backend.

--- a/.github/workflows/terraform-reusable.yml
+++ b/.github/workflows/terraform-reusable.yml
@@ -94,7 +94,8 @@ jobs:
             -backend-config="resource_group_name=${{ inputs.tf-state-resource-group }}" \
             -backend-config="storage_account_name=${{ inputs.tf-state-storage-account }}" \
             -backend-config="container_name=${{ inputs.tf-state-container }}" \
-            -backend-config="key=${{ inputs.tf-state-key }}"
+            -backend-config="key=${{ inputs.tf-state-key }}" \
+            -backend-config="use_azuread_auth=true"
 
       - name: Terraform Plan
         working-directory: ${{ inputs.working-directory }}
