--- a/.github/workflows/terraform-deploy-dev-infra.yml
+++ b/.github/workflows/terraform-deploy-dev-infra.yml
@@ -8,7 +8,7 @@ on:
     branches:
       - main
     paths:
-      - .github/workflows/**
+      - .github/workflows/terraform-deploy-*.yml
       - infra/**
   workflow_dispatch:
 
