--- a/.github/workflows/cd-deploy-dev-code.yml
+++ b/.github/workflows/cd-deploy-dev-code.yml
@@ -15,6 +15,7 @@ jobs:
   deploy-dev:
     name: Deploy Dev WebAPI
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    environment: Development
     uses: ./.github/workflows/cd-deploy-code-template.yml
     secrets: inherit
     with:
