--- a/.github/workflows/cd-deploy-dev-code.yml
+++ b/.github/workflows/cd-deploy-dev-code.yml
@@ -6,15 +6,13 @@ on:
   workflow_run:
     workflows:
       - CI Build Dev Code
-    branches:
-      - main
     types:
       - completed
 
 jobs:
   deploy-dev:
     name: Deploy Dev WebAPI
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
     environment: Development
     uses: ./.github/workflows/cd-deploy-code-template.yml
     secrets: inherit
