--- a/.github/workflows/cd-deploy-dev-code.yml
+++ b/.github/workflows/cd-deploy-dev-code.yml
@@ -14,9 +14,19 @@ jobs:
     name: Deploy Dev WebAPI
     if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'main' }}
     environment: Development
-    uses: ./.github/workflows/cd-deploy-code-template.yml
-    secrets: inherit
-    with:
-      app-service-name: ${{ vars.APP_SERVICE_NAME }}
-      resource-group: ${{ vars.RESOURCE_GROUP }}
-      dotnet-version: "9.0.x"
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Deploy WebAPI
+        uses: ./.github/actions/cd-deploy-webapi
+        with:
+          app-service-name: ${{ vars.APP_SERVICE_NAME }}
+          dotnet-version: "9.0.x"
+          publish-path: ./publish
+          azure-client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          azure-tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          azure-subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          azure-client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
