Use creds JSON for Azure login

--- a/.github/actions/cd-deploy-webapi/action.yml
+++ b/.github/actions/cd-deploy-webapi/action.yml
@@ -14,17 +14,8 @@ inputs:
     description: Output path for dotnet publish.
     required: false
     default: ./publish
-  azure-client-id:
-    description: Azure client ID.
-    required: true
-  azure-tenant-id:
-    description: Azure tenant ID.
-    required: true
-  azure-subscription-id:
-    description: Azure subscription ID.
-    required: true
-  azure-client-secret:
-    description: Azure client secret.
+  azure-credentials:
+    description: Azure service principal credentials JSON.
     required: true
 
 runs:
@@ -44,10 +35,7 @@ runs:
     - name: Azure Login
       uses: azure/login@v2
       with:
-        client-id: ${{ inputs.azure-client-id }}
-        tenant-id: ${{ inputs.azure-tenant-id }}
-        subscription-id: ${{ inputs.azure-subscription-id }}
-        client-secret: ${{ inputs.azure-client-secret }}
+        creds: ${{ inputs.azure-credentials }}
 
     - name: Deploy to App Service
       uses: azure/webapps-deploy@v3
