--- a/.github/workflows/cd-deploy-dev-code.yml
+++ b/.github/workflows/cd-deploy-dev-code.yml
@@ -26,7 +26,5 @@ jobs:
           app-service-name: ${{ vars.APP_SERVICE_NAME }}
           dotnet-version: "9.0.x"
           publish-path: ./publish
-          azure-client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          azure-tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          azure-subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          azure-client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+          azure-credentials: >-
+            {"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}
