--- a/pipelines/templates/terraform-steps.yml
+++ b/pipelines/templates/terraform-steps.yml
@@ -15,6 +15,9 @@ parameters:
   appServicePlanName: ''
   appServicePlanSkuName: 'B1'
   appInsightsName: ''
+  keyVaultName: ''
+  foundryResourceName: ''
+  foundryProjectName: ''
   linuxFxVersion: 'DOTNETCORE|9.0'
 
 steps:
@@ -49,6 +52,9 @@ steps:
           -var="app_service_plan_name=${{ parameters.appServicePlanName }}" \
           -var="app_service_plan_sku_name=${{ parameters.appServicePlanSkuName }}" \
           -var="app_insights_name=${{ parameters.appInsightsName }}" \
+          -var="key_vault_name=${{ parameters.keyVaultName }}" \
+          -var="foundry_resource_name=${{ parameters.foundryResourceName }}" \
+          -var="foundry_project_name=${{ parameters.foundryProjectName }}" \
           -var="linux_fx_version=${{ parameters.linuxFxVersion }}"
 
   - task: AzureCLI@2
