--- a/.github/workflows/terraform-deploy-infra-template.yml
+++ b/.github/workflows/terraform-deploy-infra-template.yml
@@ -77,6 +77,9 @@ jobs:
             -var="app_service_plan_name=${{ vars.APP_SERVICE_PLAN_NAME }}" \
             -var="app_service_plan_sku_name=${{ inputs.app-service-plan-sku-name }}" \
             -var="app_insights_name=${{ vars.APP_INSIGHTS_NAME }}" \
+            -var="key_vault_name=${{ vars.KEYVAULT_NAME }}" \
+            -var="foundry_resource_name=${{ vars.FOUNDRY_RESOURCE_NAME }}" \
+            -var="foundry_project_name=${{ vars.FOUNDRY_PROJECT_NAME }}" \
             -var="log_analytics_workspace_name=${{ vars.LOG_ANALYTICS_WORKSPACE_NAME }}" \
             -var="log_analytics_workspace_sku=${{ vars.LOG_ANALYTICS_WORKSPACE_SKU }}" \
             -var="log_analytics_workspace_retention_in_days=${{ vars.LOG_ANALYTICS_WORKSPACE_RETENTION_IN_DAYS }}" \
