--- a/src/Agentic.DevOps.UI/appsettings.Development.json
+++ b/src/Agentic.DevOps.UI/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Foundry": {
+    "ProjectEndpoint": "https://agentic-devops-resource-dev.services.ai.azure.com/api/projects/agentic-devops-project-dev",
+    "AgentName": "AgenticDevOpsWorkflow",
+    "AgentVersion": "13",
+    "UserMessage": "Hi AgenticDevOpsWorkflow",
+    "Scope": "https://ai.azure.com/.default"
   }
 }
