--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ TestResults/
 !.vscode/extensions.json
 !.vscode/settings.json
 
+# Local appsettings
+src/Agentic.DevOps.UI/appsettings.Development.json
+
 # Rider / JetBrains
 .idea/
 *.sln.iml
