--- a/src/Agentic.DevOps.UI/Agentic.DevOps.UI.csproj
+++ b/src/Agentic.DevOps.UI/Agentic.DevOps.UI.csproj
@@ -6,4 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.AI.Projects" Version="1.2.*-*" />
+    <PackageReference Include="Azure.Identity" Version="1.17.1" />
+    <PackageReference Include="OpenAI" Version="2.*" />
+  </ItemGroup>
+
 </Project>
